<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/alpha-real"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/alphaReal"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="26dp" />

    <EditText
        android:id="@+id/alpha-img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/alphaImg"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="82dp" />

    <EditText
        android:id="@+id/beta-real"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/betaReal"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="136dp" />

    <EditText
        android:id="@+id/beta-img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/betaImg"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="193dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="254dp"
        android:layout_height="51dp"
        android:onClick="nextListener"
        android:text="@string/next"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="289dp" />

</android.support.constraint.ConstraintLayout>